// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Stores metadata about an ExchangeStepAttempt.
message ExchangeStepAttemptDetails {
  message DebugLog {
    // When the log entry was made.
    google.protobuf.Timestamp time = 1;

    // Human-readable debug message. This should NOT include any user data.
    string message = 2;
  }
  // Warnings, errors, and other messages for debugging purposes. Append-only.
  repeated DebugLog debug_log_entries = 4;

  // Signed URL containing paths, tables, etc. accessible to the other party.
  // Each of these point to remote cloud blob storage services.
  // Initially these will only support GCS urls.
  // Outputs point to encrypted data.
  repeated string shared_outputs = 5;
  // Inputs point to a bucket location to push encrypted data to.
  repeated string shared_inputs = 8;

  // When the ExchangeStepAttempt was created.
  google.protobuf.Timestamp start_time = 6;

  // When the ExchangeStepAttempt was last updated.
  google.protobuf.Timestamp update_time = 7;
}
